--- a/style.css
+++ b/style.css
@@ -89,3 +89,13 @@ button:hover {
   transition: 0.6s;
   cursor: pointer;
 }
+@media (max-width:650px) {
+  .container{
+    width: 350px;
+    margin: auto;
+  }
+
+  .git, .front, .linkedin, .twitter, .instagram {
+    padding: 0.5rem 5rem;
+  }
+}
